--- a/wiki/bees/index.html
+++ b/wiki/bees/index.html
@@ -32,6 +32,7 @@
 <li><a href="#honey-bee" >• Honey Bee</a></li>
 <li><a href="#buff-tailed-bumble-bee" >• Buff-Tailed Bumble Bee</a></li>
 <li><a href="#early-mining-bee" >• Early Mining Bee</a></li>
+<li><a href="#marshams-nomad-bee" >• Marsham&#39;s Nomad Bee</a></li>
 </ul>
 </details></div>
 
@@ -135,6 +136,17 @@
 <li><a href="https://eol.org/pages/2747408"  target="_blank" rel="noreferrer" >↗ EOL Profile</a></li>
 </ul></div>
 <hr>
+
+<h2 id="marshams-nomad-bee">Marsham&rsquo;s Nomad Bee</h2>
+<figure><img src="/img/wiki/bees10.jpg" loading="lazy" alt="A zoomed in photo of a small, slim bee. The bee has orange legs and antenae with a distinct yellow and black pattern on it&#39;s abdomen. It&#39;s thorax is hairy." width="100%" height="100%">
+<figcaption>Nomada marshalmella</figcaption></figure>
+
+<p>The most common nomad bee in Ireland. This species looks an awful lot like a wasp with it&rsquo;s yellow-patterned abdomen. It&rsquo;s easily spotted by it&rsquo;s orange-red coloured legs and antennae. Spotted in late April in apple tree blooms, though can appear from April thru September. The first cuckoo species I&rsquo;ve found, this one parasites the nest of species like the chocolate mining bee.</p>
+<div class="listbox box"><ul>
+<li><a href="https://species.biodiversityireland.ie/profile.php?taxonId=56937"  target="_blank" rel="noreferrer" >↗ Irish Biodiversity Data Centre Profile</a></li>
+<li><a href="http://eol.org/pages/2758940"  target="_blank" rel="noreferrer" >↗ EOL Profile</a></li>
+</ul></div>
+<hr>
 <div class="listbox box"><div><h2>Further Reading</h2></div><hr><ul>
 <li><a href="https://pollinators.ie/record-pollinators/bees/"  target="_blank" rel="noreferrer" >↗ Irish Biodiversity Data Centre</a></li>
 <li><a href="https://biodiversityireland.ie/identifying-irish-bumblebees/lesson.html"  target="_blank" rel="noreferrer" >↗ Bumble Bee Identification Guide</a></li>
@@ -156,7 +168,7 @@
 Originally Published: <strong>July 2022</strong><br/>
 
 
-Last Updated: <strong>February 2025</strong><br/>
+Last Updated: <strong>April 2025</strong><br/>
 d00k.net © 2022—2025 &nbsp;-<a href="https://creativecommons.org/licenses/by-nc-sa/4.0/"> BY-NC-SA 4.0</a>
 </div>
 </details>
