Update about section

--- a/about/connections/index.html
+++ b/about/connections/index.html
@@ -18,27 +18,17 @@
 <p>Various connections of friends and folks from around the</p>
 <div class="listbox box"><div><h2>Friends</h2></div><hr><ul>
 
-<li><a href="https://www.pixouls.xyz/"  target="_blank" rel="noreferrer" >↗ Pixoul&#39;s Site</a></li>
-
 <li><a href="https://njoqi.me/"  target="_blank" rel="noreferrer" >↗ njoqi</a></li>
-
-<li><a href="https://lucas.love/"  target="_blank" rel="noreferrer" >↗ Lucas.love</a></li>
-
-<li><a href="https://ghettobastler.com/"  target="_blank" rel="noreferrer" >↗ Ghettobastler</a></li>
-
-<li><a href="https://82mhz.net/"  target="_blank" rel="noreferrer" >↗ 82MHz&#39;s Site</a></li>
-
-<li><a href="https://www.simonpanrucker.com/"  target="_blank" rel="noreferrer" >↗ Simon Panrucker&#39;s Site</a></li>
 
 <li><a href="https://thesam.zone/"  target="_blank" rel="noreferrer" >↗ theSam.Zone</a></li>
 
-<li><a href="https://jagtalon.com/"  target="_blank" rel="noreferrer" >↗ Jag Talon</a></li>
-
-<li><a href="https://www.paritybit.ca/"  target="_blank" rel="noreferrer" >↗ jbauer&#39;s Site</a></li>
+<li><a href="https://ghettobastler.com/"  target="_blank" rel="noreferrer" >↗ Ghettobastler</a></li>
 
 </ul></div>
 <div class="listbox box"><div><h2>Webring</h2><p>A bunch of my favourite sites from the <a href="https://webring.xxiivv.com/" target="_blank" rel="noopener">Merveilles</a> webring.</p></div><hr><ul>
 <li><a href="https://wiki.xxiivv.com/site/home.html"  target="_blank" rel="noreferrer" >↗ XXIIVV Wiki</a></li>
+<li><a href="https://www.pixouls.xyz/"  target="_blank" rel="noreferrer" >↗ Pixoul&#39;s Site</a></li>
+<li><a href="https://www.paritybit.ca/"  target="_blank" rel="noreferrer" >↗ jbauer&#39;s Site</a></li>
 <li><a href="https://thomasorus.com"  target="_blank" rel="noreferrer" >↗ Thomasorus</a></li>
 <li><a href="https://ritualdust.com/"  target="_blank" rel="noreferrer" >↗ RitualDust</a></li>
 <li><a href="https://tendigits.space/"  target="_blank" rel="noreferrer" >↗ TenDigits</a></li>
@@ -64,7 +54,7 @@
 Originally Published: <strong>September 2023</strong><br/>
 
 
-
+Last Updated: <strong>June 2025</strong><br/>
 d00k.net © 2022—2025 &nbsp;-<a href="https://creativecommons.org/licenses/by-nc-sa/4.0/"> BY-NC-SA 4.0</a>
 </div>
 </details>
