--- a/wiki/bees/index.html
+++ b/wiki/bees/index.html
@@ -33,6 +33,9 @@
 <li><a href="#buff-tailed-bumble-bee" >• Buff-Tailed Bumble Bee</a></li>
 <li><a href="#early-mining-bee" >• Early Mining Bee</a></li>
 <li><a href="#marshams-nomad-bee" >• Marsham&#39;s Nomad Bee</a></li>
+<li><a href="#red-mason-bee" >• Red Mason Bee</a></li>
+<li><a href="#chocolate-mining-bee" >• Chocolate Mining Bee</a></li>
+<li><a href="#smooth-faced-furrow-bee" >• Smooth-faced Furrow Bee</a></li>
 </ul>
 </details></div>
 
@@ -147,6 +150,39 @@
 <li><a href="http://eol.org/pages/2758940"  target="_blank" rel="noreferrer" >↗ EOL Profile</a></li>
 </ul></div>
 <hr>
+
+<h2 id="red-mason-bee">Red Mason Bee</h2>
+<figure><img src="/img/wiki/bees10.jpg" loading="lazy" alt="A zoomed in photo of a small, slim bee. The bee has orange legs and antenae with a distinct yellow and black pattern on it&#39;s abdomen. It&#39;s thorax is hairy." width="100%" height="100%">
+<figcaption>Osmia rufa</figcaption></figure>
+
+<p>A rather new species of Bee in Ireland, the Red Mason Bee is speculated to have been deliberately introduced as it is commercially available and a good pollinator. Quite a large bee, it&rsquo;s easily spotted by it&rsquo;s Orange, almost golden hue. It often uses &ldquo;Bee Hotels&rdquo;, but I&rsquo;ve also spotted it living in ditches. The male is quite a bit smaller than the female and almost resembles a fly at a glance.</p>
+<div class="listbox box"><ul>
+<li><a href="https://species.biodiversityireland.ie/profile.php?taxonId=57003"  target="_blank" rel="noreferrer" >↗ Irish Biodiversity Data Centre Profile</a></li>
+<li><a href="http://eol.org/pages/2753677"  target="_blank" rel="noreferrer" >↗ EOL Profile</a></li>
+</ul></div>
+<hr>
+
+<h2 id="chocolate-mining-bee">Chocolate Mining Bee</h2>
+<figure><img src="/img/wiki/bees10.jpg" loading="lazy" alt="A zoomed in photo of a small, slim bee. The bee has orange legs and antenae with a distinct yellow and black pattern on it&#39;s abdomen. It&#39;s thorax is hairy." width="100%" height="100%">
+<figcaption>Andrena (Hoplandrena) scotica</figcaption></figure>
+
+<p>A large, common solitary bee. The Chocolate Mining bee is a host species of Marsham&rsquo;s Nomad Bee.</p>
+<div class="listbox box"><ul>
+<li><a href="https://species.biodiversityireland.ie/profile.php?taxonId=55591"  target="_blank" rel="noreferrer" >↗ Irish Biodiversity Data Centre Profile</a></li>
+<li><a href="http://eol.org/pages/6974204"  target="_blank" rel="noreferrer" >↗ EOL Profile</a></li>
+</ul></div>
+<hr>
+
+<h2 id="smooth-faced-furrow-bee">Smooth-faced Furrow Bee</h2>
+<figure><img src="/img/wiki/bees10.jpg" loading="lazy" alt="A zoomed in photo of a small, slim bee. The bee has orange legs and antenae with a distinct yellow and black pattern on it&#39;s abdomen. It&#39;s thorax is hairy." width="100%" height="100%">
+<figcaption>Lasioglossum fratellum</figcaption></figure>
+
+<p>The smallest Bee I&rsquo;ve spotted so far. While the exact species is hard to confirm, I suspect this Furrow Bee to be the Smooth-faced from it&rsquo;s silver hue. I have not been able to observe this too much, but discovered it near a blooming chestnut tree.</p>
+<div class="listbox box"><ul>
+<li><a href="https://species.biodiversityireland.ie/profile.php?taxonId=56640"  target="_blank" rel="noreferrer" >↗ Irish Biodiversity Data Centre Profile</a></li>
+<li><a href="http://eol.org/pages/2743628"  target="_blank" rel="noreferrer" >↗ EOL Profile</a></li>
+</ul></div>
+<hr>
 <div class="listbox box"><div><h2>Further Reading</h2></div><hr><ul>
 <li><a href="https://pollinators.ie/record-pollinators/bees/"  target="_blank" rel="noreferrer" >↗ Irish Biodiversity Data Centre</a></li>
 <li><a href="https://biodiversityireland.ie/identifying-irish-bumblebees/lesson.html"  target="_blank" rel="noreferrer" >↗ Bumble Bee Identification Guide</a></li>
@@ -168,7 +204,7 @@
 Originally Published: <strong>July 2022</strong><br/>
 
 
-Last Updated: <strong>April 2025</strong><br/>
+Last Updated: <strong>May 2025</strong><br/>
 d00k.net © 2022—2025 &nbsp;-<a href="https://creativecommons.org/licenses/by-nc-sa/4.0/"> BY-NC-SA 4.0</a>
 </div>
 </details>
