--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 <div class="clickdiv"><h3 id="what-is-d00knet">what is d00k.net?</h3><p>A personal website, experimental sustainable web design playground, a statement on modern design practices and more..</p></div></a>
 
 <div class="listbox box"><div><h2>Latest from the Blog</h2><p>Check out some of the latest posts from the blog.</p></div><hr><ul class="linklist">
-<li><a href="/blog/quickscreen_rockbox_tags/">∙ A new way to theme the Quickscreen in Rockbox</a></li><li><a href="/blog/year-review-2023/">∙ Year Review 2023</a></li><li><a href="/blog/redesigning_again/">∙ Re-designing my site, one more time</a></li> 
+<li><a href="/blog/quickscreen_rockbox_tags/">∙ A new way to theme the Quickscreen in Rockbox</a></li><li><a href="/blog/redesigning_again/">∙ Re-designing my site, one more time</a></li><li><a href="/blog/one-year-of-dook-net/">∙ Celebrating a Year of d00k.net</a></li> 
 </ul></div>
 </div>
 <div class="footer layout">
