--- a/design/compacticons/index.html
+++ b/design/compacticons/index.html
@@ -24,7 +24,7 @@
 <li><a href="https://github.com/D0-0K/compacticons/archive/refs/tags/release.zip"  target="_blank" rel="noreferrer" >↗ download the set</a></li>
 </ul></div>
 
-<nav class="navbut"><a class="prev" href="/design/">← Back to  Design Portfolio </a>
+<nav class="navbut"><a class="prev" href="/design/"><img style="margin:0 8px -2px -6px" src="/img/assets/left.svg"> Back to  Design Portfolio </a><a class="up" href="#"><img style="margin:0 0 -2px" src="/img/assets/up.svg"></a>
 </nav>
 </div>
 <div class="footer layout">
