--- a/photos/experiments/selfportraiture/index.html
+++ b/photos/experiments/selfportraiture/index.html
@@ -37,7 +37,7 @@
 <img  src="/img/photos/selfportraiture/selfportraiture07.jpg" loading="lazy" alt="A hard-boiled portrait of a person with diffracted images.">
 
 
-<nav class="navbut"><a class="prev" href="/photos/#experiments">← Back to  Photo Gallery </a>
+<nav class="navbut"><a class="prev" href="/photos/#experiments"><img style="margin:0 8px -2px -6px" src="/img/assets/left.svg"> Back to  Photo Gallery </a><a class="up" href="#"><img style="margin:0 0 -2px" src="/img/assets/up.svg"></a>
 </nav>
 </div>
 <div class="footer layout">
