--- a/wiki/bees/index.html
+++ b/wiki/bees/index.html
@@ -188,7 +188,7 @@
 <li><a href="https://biodiversityireland.ie/identifying-irish-bumblebees/lesson.html"  target="_blank" rel="noreferrer" >↗ Bumble Bee Identification Guide</a></li>
 </ul></div>
 
-<nav class="navbut"><a class="prev" href="/wiki/#nature-wiki">← Back to  Wiki </a>
+<nav class="navbut"><a class="prev" href="/wiki/#nature-wiki"><img style="margin:0 8px -2px -6px" src="/img/assets/left.svg"> Back to  Wiki </a><a class="up" href="#"><img style="margin:0 0 -2px" src="/img/assets/up.svg"></a>
 </nav>
 </div>
 <div class="footer layout">
