--- a/wiki/rockbox_advanced/font_combining/index.html
+++ b/wiki/rockbox_advanced/font_combining/index.html
@@ -59,7 +59,7 @@
 <li>⚬ Export the font by going to <strong>File &gt;  Make Font</strong> choose true type and validate.</li>
 </ul></div>
 
-<nav class="navbut"><a class="prev" href="/wiki/">← Back to  Wiki </a>
+<nav class="navbut"><a class="prev" href="/wiki/"><img style="margin:0 8px -2px -6px" src="/img/assets/left.svg"> Back to  Wiki </a><a class="up" href="#"><img style="margin:0 0 -2px" src="/img/assets/up.svg"></a>
 </nav>
 </div>
 <div class="footer layout">
