--- a/about/colophon/identity/index.html
+++ b/about/colophon/identity/index.html
@@ -38,7 +38,7 @@
 
 <p>The self portrait used for profile pictures on websites. Came from an art project where I combined the same 2 images 100 times with different blending layers to create different results. Also seen on the about page.</p>
 
-<nav class="navbut"><a class="prev" href="/about/colophon/">← Back to  Colophon </a>
+<nav class="navbut"><a class="prev" href="/about/colophon/"><img style="margin:0 8px -2px -6px" src="/img/assets/left.svg"> Back to  Colophon </a><a class="up" href="#"><img style="margin:0 0 -2px" src="/img/assets/up.svg"></a>
 </nav>
 </div>
 <div class="footer layout">
