--- a/about/colophon/site_stats/index.html
+++ b/about/colophon/site_stats/index.html
@@ -17,7 +17,7 @@
 
 <div class="title"><h1 id="top">Performance and Compliance Stats</h1><hr></div>
 
-<nav class="navbut"><a class="prev" href="/about/colophon/">← Back to  Colophon </a>
+<nav class="navbut"><a class="prev" href="/about/colophon/"><img style="margin:0 8px -2px -6px" src="/img/assets/left.svg"> Back to  Colophon </a><a class="up" href="#"><img style="margin:0 0 -2px" src="/img/assets/up.svg"></a>
 </nav>
 </div>
 <div class="footer layout">
