--- a/about/colophon/whatisd00kdotnet/index.html
+++ b/about/colophon/whatisd00kdotnet/index.html
@@ -26,7 +26,7 @@
 <hr>
 <p>to be finished..</p>
 
-<nav class="navbut"><a class="prev" href="/about/colophon/">← Back to  Colophon </a>
+<nav class="navbut"><a class="prev" href="/about/colophon/"><img style="margin:0 8px -2px -6px" src="/img/assets/left.svg"> Back to  Colophon </a><a class="up" href="#"><img style="margin:0 0 -2px" src="/img/assets/up.svg"></a>
 </nav>
 </div>
 <div class="footer layout">
