--- a/about/index.html
+++ b/about/index.html
@@ -29,7 +29,7 @@
 <li><a href="./setup" >• Setup - An inventory of sorts</a></li>
 </ul></div>
 
-<nav class="navbut"><a class="prev" href="/">← Back to  Home </a>
+<nav class="navbut"><a class="prev" href="/"><img style="margin:0 8px -2px -6px" src="/img/assets/left.svg"> Back to  Home </a><a class="up" href="#"><img style="margin:0 0 -2px" src="/img/assets/up.svg"></a>
 </nav>
 </div>
 <div class="footer layout">
