--- a/about/setup/index.html
+++ b/about/setup/index.html
@@ -80,7 +80,7 @@
 </div>
 </div>
 
-<nav class="navbut"><a class="prev" href="/about/">← Back to  About </a>
+<nav class="navbut"><a class="prev" href="/about/"><img style="margin:0 8px -2px -6px" src="/img/assets/left.svg"> Back to  About </a><a class="up" href="#"><img style="margin:0 0 -2px" src="/img/assets/up.svg"></a>
 </nav>
 </div>
 <div class="footer layout">
