--- a/design/adwaitapod/index.html
+++ b/design/adwaitapod/index.html
@@ -33,7 +33,7 @@
 
 <h2 id="credit">Credit</h2><p> Credit to the <a href="http://www.gnome.org" target="_blank" rel="noopener">GNOME Project</a> for the adwaita icons used in this theme, as well to the authors of the <a href="https://cantarell.gnome.org/" target="_blank" rel="noopener">Cantarell Typeface</a> Font.</p>
 
-<nav class="navbut"><a class="prev" href="/design/">← Back to  Design Portfolio </a>
+<nav class="navbut"><a class="prev" href="/design/"><img style="margin:0 8px -2px -6px" src="/img/assets/left.svg"> Back to  Design Portfolio </a><a class="up" href="#"><img style="margin:0 0 -2px" src="/img/assets/up.svg"></a>
 </nav>
 </div>
 <div class="footer layout">
