--- a/design/beryl_logo/index.html
+++ b/design/beryl_logo/index.html
@@ -28,7 +28,7 @@
 <li><a href="https://thesam.zone/"  target="_blank" rel="noreferrer" >↗ Sam&#39;s Blog</a></li>
 </ul></div>
 
-<nav class="navbut"><a class="prev" href="/design/">← Back to  Design Portfolio </a>
+<nav class="navbut"><a class="prev" href="/design/"><img style="margin:0 8px -2px -6px" src="/img/assets/left.svg"> Back to  Design Portfolio </a><a class="up" href="#"><img style="margin:0 0 -2px" src="/img/assets/up.svg"></a>
 </nav>
 </div>
 <div class="footer layout">
