--- a/design/famicase/index.html
+++ b/design/famicase/index.html
@@ -30,7 +30,7 @@
 <li><a href="https://super-meteor.com/?pid=159388800"  target="_blank" rel="noreferrer" >↗ Purchase the Famicase 2021 Zine</a></li>
 </ul></div>
 
-<nav class="navbut"><a class="prev" href="/design/">← Back to  Design Portfolio </a>
+<nav class="navbut"><a class="prev" href="/design/"><img style="margin:0 8px -2px -6px" src="/img/assets/left.svg"> Back to  Design Portfolio </a><a class="up" href="#"><img style="margin:0 0 -2px" src="/img/assets/up.svg"></a>
 </nav>
 </div>
 <div class="footer layout">
