--- a/design/games/gamejams/index.html
+++ b/design/games/gamejams/index.html
@@ -52,7 +52,7 @@
 </ul>
 
 
-<nav class="navbut"><a class="prev" href="/design/">← Back to  Design Portfolio </a>
+<nav class="navbut"><a class="prev" href="/design/"><img style="margin:0 8px -2px -6px" src="/img/assets/left.svg"> Back to  Design Portfolio </a><a class="up" href="#"><img style="margin:0 0 -2px" src="/img/assets/up.svg"></a>
 </nav>
 </div>
 <div class="footer layout">
