--- a/design/themify/index.html
+++ b/design/themify/index.html
@@ -51,7 +51,7 @@
 <iframe src="https://itch.io/embed/1968733?linkback=true" width="552" height="167" frameborder="0" style="margin-bottom:16px"><a href="https://d00k.itch.io/themifywallpaperpack">Themify - Wallpaper Pack by Dook</a></iframe>
 
 
-<nav class="navbut"><a class="prev" href="/design/">← Back to  Design Portfolio </a>
+<nav class="navbut"><a class="prev" href="/design/"><img style="margin:0 8px -2px -6px" src="/img/assets/left.svg"> Back to  Design Portfolio </a><a class="up" href="#"><img style="margin:0 0 -2px" src="/img/assets/up.svg"></a>
 </nav>
 </div>
 <div class="footer layout">
