--- a/design/tindra_grove/index.html
+++ b/design/tindra_grove/index.html
@@ -23,7 +23,7 @@
 <img  src="/img/design/Tindra_VIG.png" loading="lazy" alt="Visual Identity Guide for the client">
 
 
-<nav class="navbut"><a class="prev" href="/design/">← Back to  Design Portfolio </a>
+<nav class="navbut"><a class="prev" href="/design/"><img style="margin:0 8px -2px -6px" src="/img/assets/left.svg"> Back to  Design Portfolio </a><a class="up" href="#"><img style="margin:0 0 -2px" src="/img/assets/up.svg"></a>
 </nav>
 </div>
 <div class="footer layout">
