--- a/photos/digicam/sunsets/index.html
+++ b/photos/digicam/sunsets/index.html
@@ -29,7 +29,7 @@
 <img  src="/img/photos/digicam/digicam05.jpg" loading="lazy" alt="Sun hitting the corner of two walls.">
 
 
-<nav class="navbut"><a class="prev" href="/photos/#digicam-photography">← Back to  Photo Gallery </a>
+<nav class="navbut"><a class="prev" href="/photos/#digicam-photography"><img style="margin:0 8px -2px -6px" src="/img/assets/left.svg"> Back to  Photo Gallery </a><a class="up" href="#"><img style="margin:0 0 -2px" src="/img/assets/up.svg"></a>
 </nav>
 </div>
 <div class="footer layout">
