--- a/photos/experiments/light/index.html
+++ b/photos/experiments/light/index.html
@@ -31,7 +31,7 @@
 <img  src="/img/photos/light/light05.jpg" loading="lazy" alt="Various shapes of light drawn above cinema seats.">
 
 
-<nav class="navbut"><a class="prev" href="/photos/#experiments">← Back to  Photo Gallery </a>
+<nav class="navbut"><a class="prev" href="/photos/#experiments"><img style="margin:0 8px -2px -6px" src="/img/assets/left.svg"> Back to  Photo Gallery </a><a class="up" href="#"><img style="margin:0 0 -2px" src="/img/assets/up.svg"></a>
 </nav>
 </div>
 <div class="footer layout">
