--- a/photos/index.html
+++ b/photos/index.html
@@ -228,7 +228,7 @@
 
 <div class="clickdiv"><h3 id="self-portraiture">Self Portraiture</h3><p>An experiment messing around with light and exposure for a piece of work based on &lsquo;The Portrait of Dorian Gray&rsquo;</p></div></a>
 
-<nav class="navbut"><a class="prev" href="/">← Back to  Home </a>
+<nav class="navbut"><a class="prev" href="/"><img style="margin:0 8px -2px -6px" src="/img/assets/left.svg"> Back to  Home </a><a class="up" href="#"><img style="margin:0 0 -2px" src="/img/assets/up.svg"></a>
 </nav>
 </div>
 <div class="footer layout">
