--- a/photos/places/loughderg/index.html
+++ b/photos/places/loughderg/index.html
@@ -35,7 +35,7 @@
 <img  src="/img/photos/places/loughderg06.jpg" loading="lazy" alt="Lough Derg">
 
 
-<nav class="navbut"><a class="prev" href="/photos/#places">← Back to  Photo Gallery </a>
+<nav class="navbut"><a class="prev" href="/photos/#places"><img style="margin:0 8px -2px -6px" src="/img/assets/left.svg"> Back to  Photo Gallery </a><a class="up" href="#"><img style="margin:0 0 -2px" src="/img/assets/up.svg"></a>
 </nav>
 </div>
 <div class="footer layout">
