--- a/photos/places/westport/index.html
+++ b/photos/places/westport/index.html
@@ -44,7 +44,7 @@
 <img  src="/img/photos/places/westport09.jpg" loading="lazy" alt="A striking, red bridge over a stream">
 
 
-<nav class="navbut"><a class="prev" href="/photos/#places">← Back to  Photo Gallery </a>
+<nav class="navbut"><a class="prev" href="/photos/#places"><img style="margin:0 8px -2px -6px" src="/img/assets/left.svg"> Back to  Photo Gallery </a><a class="up" href="#"><img style="margin:0 0 -2px" src="/img/assets/up.svg"></a>
 </nav>
 </div>
 <div class="footer layout">
