--- a/photos/trichrome/summer/index.html
+++ b/photos/trichrome/summer/index.html
@@ -35,8 +35,8 @@
 <img  src="/img/photos/trichrome/summer/summer07.jpg" loading="lazy" alt="A burnt, discarded trunk of a tree.">
 
 
-<nav class="navbut"><a class="prev" href="/photos/#trichrome-photography">← Back to  Photo Gallery </a>
-<a class="next" href="../autumn">Next Page →</a></nav>
+<nav class="navbut"><a class="prev" href="/photos/#trichrome-photography"><img style="margin:0 8px -2px -6px" src="/img/assets/left.svg"> Back to  Photo Gallery </a><a class="up" href="#"><img style="margin:0 0 -2px" src="/img/assets/up.svg"></a>
+<a class="next" href="../autumn">Next <img style="margin:0 -6px -2px 8px" src="/img/assets/right.svg"></a></nav>
 </div>
 <div class="footer layout">
 <div style="background:#bbb;padding:16px 16px 14px;border-radius:35px;min-height:40px">
