--- a/photos/trichrome/trichrome_notes/index.html
+++ b/photos/trichrome/trichrome_notes/index.html
@@ -30,7 +30,7 @@
 
 <p>Many photographers will point you towards often pricey acrylic lenses. However simple plastic, coloured vinyl sheets are a fantastic substitute for dirt cheap lenses. I made my frames out of cardboard, two layers at 90° to each other with the vinyl in the middle. The vinyl is stretched out like a canvas and super glued to the frames. They aren&rsquo;t perfect though, the green and blue plastics I made leaked other colours pretty significantly. This can be fixed by double layering the vinyl, however I took it in it&rsquo;s stride and the imperfections became the backbone of my personal technique. The one other downside is that rain and water will ruin them temporarily, this makes it impossible to shoot good photos in the rain sadly.</p>
 
-<nav class="navbut"><a class="prev" href="/photos/#trichrome-photography">← Back to  Photo Gallery </a>
+<nav class="navbut"><a class="prev" href="/photos/#trichrome-photography"><img style="margin:0 8px -2px -6px" src="/img/assets/left.svg"> Back to  Photo Gallery </a><a class="up" href="#"><img style="margin:0 0 -2px" src="/img/assets/up.svg"></a>
 </nav>
 </div>
 <div class="footer layout">
