--- a/photos/trichrome/winter/index.html
+++ b/photos/trichrome/winter/index.html
@@ -32,7 +32,7 @@
 <img  src="/img/photos/trichrome/winter/winter06.jpg" loading="lazy" alt="Frosty grass.">
 
 
-<nav class="navbut"><a class="prev" href="/photos/#trichrome-photography">← Back to  Photo Gallery </a>
+<nav class="navbut"><a class="prev" href="/photos/#trichrome-photography"><img style="margin:0 8px -2px -6px" src="/img/assets/left.svg"> Back to  Photo Gallery </a><a class="up" href="#"><img style="margin:0 0 -2px" src="/img/assets/up.svg"></a>
 </nav>
 </div>
 <div class="footer layout">
