--- a/wiki/ecovillage/index.html
+++ b/wiki/ecovillage/index.html
@@ -54,7 +54,7 @@ a large <a href="https://cloughjordancommunityfarm.ie/" target="_blank" rel="noo
 <figcaption>a wattle and daub round house</figcaption></figure>
 
 
-<nav class="navbut"><a class="prev" href="/wiki/#nature-wiki">← Back to  Wiki </a>
+<nav class="navbut"><a class="prev" href="/wiki/#nature-wiki"><img style="margin:0 8px -2px -6px" src="/img/assets/left.svg"> Back to  Wiki </a><a class="up" href="#"><img style="margin:0 0 -2px" src="/img/assets/up.svg"></a>
 </nav>
 </div>
 <div class="footer layout">
