--- a/wiki/linux/imagemagick/index.html
+++ b/wiki/linux/imagemagick/index.html
@@ -85,7 +85,7 @@ or
 <li><a href="https://imagemagick.org/"  target="_blank" rel="noreferrer" >↗ Imagemagick</a></li>
 </ul></div>
 
-<nav class="navbut"><a class="prev" href="/wiki/#linux-wiki">← Back to  Wiki </a>
+<nav class="navbut"><a class="prev" href="/wiki/#linux-wiki"><img style="margin:0 8px -2px -6px" src="/img/assets/left.svg"> Back to  Wiki </a><a class="up" href="#"><img style="margin:0 0 -2px" src="/img/assets/up.svg"></a>
 </nav>
 </div>
 <div class="footer layout">
