--- a/wiki/linux/pdf/index.html
+++ b/wiki/linux/pdf/index.html
@@ -58,7 +58,7 @@ output output.pdf</code></pre><hr>
 <li><a href="https://github.com/myollie/img2pdf"  target="_blank" rel="noreferrer" >↗ Img2Pdf Github</a></li>
 </ul></div>
 
-<nav class="navbut"><a class="prev" href="/wiki/#linux-wiki">← Back to  Wiki </a>
+<nav class="navbut"><a class="prev" href="/wiki/#linux-wiki"><img style="margin:0 8px -2px -6px" src="/img/assets/left.svg"> Back to  Wiki </a><a class="up" href="#"><img style="margin:0 0 -2px" src="/img/assets/up.svg"></a>
 </nav>
 </div>
 <div class="footer layout">
