--- a/wiki/pico8-games/index.html
+++ b/wiki/pico8-games/index.html
@@ -52,7 +52,7 @@
 <p><a href="https://www.lexaloffle.com/bbs/?pid=59509#p" target="_blank" rel="noopener">⬩ Hungry Harry 3D</a>by paloblancogames - A 3D platformer for Pico-8. Yes you read that right. Get to the end of each level while eating along the way.</p>
 <p><a href="https://www.lexaloffle.com/bbs/?tid=44343" target="_blank" rel="noopener">⬩ Golf Sunday</a>by johanp - Tiny, chill golf game made for the LowResJam 2021.</p>
 
-<nav class="navbut"><a class="prev" href="/wiki/">← Back to  Wiki </a>
+<nav class="navbut"><a class="prev" href="/wiki/"><img style="margin:0 8px -2px -6px" src="/img/assets/left.svg"> Back to  Wiki </a><a class="up" href="#"><img style="margin:0 0 -2px" src="/img/assets/up.svg"></a>
 </nav>
 </div>
 <div class="footer layout">
