--- a/wiki/rockbox_advanced/missing_features/index.html
+++ b/wiki/rockbox_advanced/missing_features/index.html
@@ -68,7 +68,7 @@
 <p>Visually, this will help create more beautiful and informative Database menus. Something which I think would help user satisfaction, as the menu experience is complained about a lot in iPod communities.</p>
 <p>This feature would depend on having Page directory tags to be useful</p>
 
-<nav class="navbut"><a class="prev" href="/wiki/#rockbox-theming">← Back to  Wiki </a>
+<nav class="navbut"><a class="prev" href="/wiki/#rockbox-theming"><img style="margin:0 8px -2px -6px" src="/img/assets/left.svg"> Back to  Wiki </a><a class="up" href="#"><img style="margin:0 0 -2px" src="/img/assets/up.svg"></a>
 </nav>
 </div>
 <div class="footer layout">
