--- a/wiki/rockbox_advanced/themed_lists_notes/index.html
+++ b/wiki/rockbox_advanced/themed_lists_notes/index.html
@@ -62,7 +62,7 @@
 
 <h2 id="dont-draw-on-the-backdrop">Don&rsquo;t draw on the Backdrop</h2><p>It&rsquo;ll crash :(</p>
 
-<nav class="navbut"><a class="prev" href="/wiki/#rockbox-theming">← Back to  Wiki </a>
+<nav class="navbut"><a class="prev" href="/wiki/#rockbox-theming"><img style="margin:0 8px -2px -6px" src="/img/assets/left.svg"> Back to  Wiki </a><a class="up" href="#"><img style="margin:0 0 -2px" src="/img/assets/up.svg"></a>
 </nav>
 </div>
 <div class="footer layout">
