--- a/wiki/rockbox_advanced/vector_graphics/index.html
+++ b/wiki/rockbox_advanced/vector_graphics/index.html
@@ -27,7 +27,7 @@ You will also need access to vector graphics. You can create your own, or find s
 
 <h2 id="preparing-your-graphics">Preparing your graphics</h2><p>There are two different ways of preparing vectors.</p>
 
-<nav class="navbut"><a class="prev" href="/wiki/">← Back to  Wiki </a>
+<nav class="navbut"><a class="prev" href="/wiki/"><img style="margin:0 8px -2px -6px" src="/img/assets/left.svg"> Back to  Wiki </a><a class="up" href="#"><img style="margin:0 0 -2px" src="/img/assets/up.svg"></a>
 </nav>
 </div>
 <div class="footer layout">
