--- a/wiki/rockbox_theming/index.html
+++ b/wiki/rockbox_theming/index.html
@@ -29,7 +29,7 @@
 
 <div class="clickdiv"><h3 id="2-the-viewport">2. The Viewport</h3><p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore disputandum putant.</p></div></a>
 
-<nav class="navbut"><a class="prev" href="/wiki/">← Back to  Wiki </a>
+<nav class="navbut"><a class="prev" href="/wiki/"><img style="margin:0 8px -2px -6px" src="/img/assets/left.svg"> Back to  Wiki </a><a class="up" href="#"><img style="margin:0 0 -2px" src="/img/assets/up.svg"></a>
 </nav>
 </div>
 <div class="footer layout">
