--- a/wiki/rockbox_theming/introduction/index.html
+++ b/wiki/rockbox_theming/introduction/index.html
@@ -55,8 +55,8 @@ This has meant that older, more complicated (and inefficient) ways of implementi
 
 <h3 id="whats-next">What&rsquo;s next?</h3><p>Over the next few chapters, we will start with a blank slate. Working from nothing, we will make a theme up from scratch and cover some core topics of the theming system by example. I highly recommend following along, if you can, to get a good feel for the system.</p>
 
-<nav class="navbut"><a class="prev" href="/wiki/rockbox_theming/">← Back to  Rockbox Theming for Beginners </a>
-<a class="next" href="../the_viewport">Next Page →</a></nav>
+<nav class="navbut"><a class="prev" href="/wiki/rockbox_theming/"><img style="margin:0 8px -2px -6px" src="/img/assets/left.svg"> Back to  Rockbox Theming for Beginners </a><a class="up" href="#"><img style="margin:0 0 -2px" src="/img/assets/up.svg"></a>
+<a class="next" href="../the_viewport">Next <img style="margin:0 -6px -2px 8px" src="/img/assets/right.svg"></a></nav>
 </div>
 <div class="footer layout">
 <div style="background:#bbb;padding:16px 16px 14px;border-radius:35px;min-height:40px">
