--- a/wiki/seedharvesting/index.html
+++ b/wiki/seedharvesting/index.html
@@ -39,7 +39,7 @@
 <li><a href="https://www.thespruce.com/growing-english-bluebells-5094292"  target="_blank" rel="noreferrer" >↗ Growing and caring for Bluebells</a></li>
 </ul></div>
 
-<nav class="navbut"><a class="prev" href="/wiki/#nature-wiki">← Back to  Wiki </a>
+<nav class="navbut"><a class="prev" href="/wiki/#nature-wiki"><img style="margin:0 8px -2px -6px" src="/img/assets/left.svg"> Back to  Wiki </a><a class="up" href="#"><img style="margin:0 0 -2px" src="/img/assets/up.svg"></a>
 </nav>
 </div>
 <div class="footer layout">
