--- a/wiki/web/images/index.html
+++ b/wiki/web/images/index.html
@@ -26,7 +26,7 @@
 
 <h2 id="hypothesis">Hypothesis</h2><p>Two possible routes come to mind immediately. The first would be using a modern image format, likely webp for now, however this method would leave users on older browsers stuck with whatever alternative. The other route might actually provide a nice alternative, or be just as good on it&rsquo;s own. Reducing the colours of an image, and using the gif image format. Since gifs are indexed, having less colours would mean smaller filesizes. However my previous tests with gifs didn&rsquo;t give me too much hope in it&rsquo;s ability to be small. The ultimate goal with these tests will be to come to some clear conclusions on various methods of making small images.</p>
 
-<nav class="navbut"><a class="prev" href="/wiki/">← Back to  Wiki </a>
+<nav class="navbut"><a class="prev" href="/wiki/"><img style="margin:0 8px -2px -6px" src="/img/assets/left.svg"> Back to  Wiki </a><a class="up" href="#"><img style="margin:0 0 -2px" src="/img/assets/up.svg"></a>
 </nav>
 </div>
 <div class="footer layout">
