--- a/wiki/websites/cheatsheet/index.html
+++ b/wiki/websites/cheatsheet/index.html
@@ -94,7 +94,7 @@ border-style: outset;</code></pre><hr>
 <li>⚬ Getting the most out of Inspect Element.</li>
 </ul></div>
 
-<nav class="navbut"><a class="prev" href="/wiki/websites/">← Back to  Web Wiki </a>
+<nav class="navbut"><a class="prev" href="/wiki/websites/"><img style="margin:0 8px -2px -6px" src="/img/assets/left.svg"> Back to  Web Wiki </a><a class="up" href="#"><img style="margin:0 0 -2px" src="/img/assets/up.svg"></a>
 </nav>
 </div>
 <div class="footer layout">
