--- a/404.html
+++ b/404.html
@@ -4,14 +4,9 @@
 <link rel="me" href="https://post.lurk.org/@dook">
 <title> 404 Page not found  • d00k.net</title></head>
 <body>
-<div class="header"><nav><div style="width:45vw;height:auto;max-width:180px"><a class="logo" href="/" aria-label="Homepage"><img src="/img/assets/Logo.svg" aria-hidden="true" width="184px" height="172px"></a></div><div class="menu"><ul role="list">
-<li><a href="/photos/">Photos</a></li>
-<li style="margin-left:auto"><a href="/wiki/">Wiki</a></li></ul>  
-<ul role="list" style="border-left:1px solid #ccc">
-<li><a href="/design/">Design</a></li>
-<li><a href="/blog/">Blog</a></li>   
-<li><a href="/about/">About</a></li>
-</ul></div></nav></div>
+<div class="header"><nav><div style="width:45vw;height:auto;max-width:180px"><a class="logo" href="/" aria-label="Homepage"><img src="/img/assets/Logo.svg" aria-hidden="true" width="184px" height="172px"></a></div><div class="menu">
+<ul><li><a href="/photos/">Photos</a></li><li><a href="/wiki/">Wiki</a></li><li><a href="/design/">Design</a></li><li><a href="/blog/">Blog</a></li><li><a href="/about/">About</a></li></ul>
+</div></nav></div>
 <div class="main layout">
 <img src="/img/assets/404.svg" alt="shadows on a dimly lit wall" width="720" > 
 <p style="text-align:center">Sorry, this page doesn't exist.</p>
@@ -21,7 +16,6 @@
 <div>
 <a class="icon" href="https://creativecommons.org/licenses/by-nc-sa/4.0/" target="_blank"><img src="/img/assets/cc.svg" loading="lazy" alt="copyright" width="28"height="28"></a>
 <a class="icon" href="https://webring.xxiivv.com/" target="_blank"><img src="/img/assets/webring.svg" loading="lazy" alt="webring" width="30"height="27"></a>
-<a class="icon" href="/index.xml" target="_blank"><img src="/img/assets/rss.svg" loading="lazy" alt="RSS Feed" width="28"height="28"></a>
 </div>
 <details style="direction:rtl;margin-top:-46px">
 <summary style="width:fit-content;margin:0;border-radius:19px;background:#9f9f9f;padding:6px 18px">Info</summary>
@@ -30,7 +24,9 @@
 
 
 
-d00k.net © 2022—2025 &nbsp;-<a href="https://creativecommons.org/licenses/by-nc-sa/4.0/"> BY-NC-SA 4.0</a>
+</div>
+<div style="direction:ltr;padding:4px 24px;background:#acacac;border-radius:20px;margin-top:8px">
+  d00k.net © 2022—2025 &nbsp;-<a href="https://creativecommons.org/licenses/by-nc-sa/4.0/"> BY-NC-SA 4.0</a>
 </div>
 </details>
 </div>
